--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -46,12 +46,17 @@
 
   <!-- Pie de página -->
   <footer class="text-center text-xs text-gray-500 mt-16 mb-8 px-4">
-    Proyecto sin fines de lucro. Análisis basado en fuentes públicas y opiniones de Fabrizio Mejía, Viridiana Ríos y
-    Manuel Pedrero.
+    Proyecto sin fines de lucro. Análisis basado en fuentes públicas.
+    
     <p class="mt-2 text-gray-400">
       Última actualización: {{ last_updated or "Fecha no disponible" }}
     </p>
+    
+    <p class="mt-2 text-xs text-gray-500 font-semibold">
+      Diseñado y desarrollado por <strong>Kuautli</strong>
+    </p>
   </footer>
+  
 
 </body>
 
