Improve text about gov dependencies

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,14 +13,17 @@
   </p>
 
   <p>
-    Recibirás <strong>seis boletas</strong>, cada una con un color distinto según el cargo a elegir:
+    Recibirás <strong>seis boletas</strong>, cada una con un color distinto según el cargo a elegir, y deberás elegir:
   </p>
 
   <ul class="list-disc list-inside space-y-1">
-    <li>🟪 <strong>Boleta morada</strong>: 5 Ministras y 4 Ministros de la SCJN</li>
-    <li>🟩 <strong>Boleta verde menta</strong>: 3 Magistradas y 2 Magistrados del TDJ</li>
-    <li>🔵 <strong>Boleta azul</strong>: 1 Magistrada y 1 Magistrado de la Sala Superior del TEPJF</li>
-    <li>🟧 <strong>Boleta salmón</strong>: 3 Magistraturas por cada una de las 5 Salas Regionales del TEPJF</li>
+    <li>🟪 <strong>Boleta morada</strong>: 5 Ministras y 4 Ministros para la Suprema Corte de Justicia de la Nación
+      (SCJN)</li>
+    <li>🟩 <strong>Boleta verde menta</strong>: 3 Magistradas y 2 Magistrados del Tribunal de Disciplina Judicial (TDJ)
+    </li>
+    <li>🔵 <strong>Boleta azul</strong>: 1 Magistrada y 1 Magistrado de la Sala Superior del Tribunal Electoral del
+      Poder Judicial de la Federación (TEPJF)</li>
+    <li>🟧 <strong>Boleta salmón</strong>: 3 Magistraturas Regionales del TEPJF</li>
     <li>🟨 <strong>Boleta amarilla</strong>: Juezas y Jueces de distrito</li>
     <li>🌸 <strong>Boleta rosa</strong>: Magistradas y Magistrados de circuito</li>
   </ul>
